# upload_files_api_drf

./: .gitignore  README.md
load_files_api_drf/: .env.dev  .env.example  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
load_files_api_drf/load_files_api_drf/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
load_files_api_drf/upload_files/: admin.py  models.py  service.py  tasks.py  views.py
load_files_api_drf/upload_files/migrations/: 0001_initial.py
load_files_api_drf/upload_files/tests/: test_views.py
